--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.9",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
