--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "file:vendor/heroicons-react",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.9",
@@ -21,8 +22,7 @@
     "react-router-dom": "^7.6.1",
     "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
-    "redux-thunk": "^3.1.0",
-    "@heroicons/react": "file:vendor/heroicons-react"
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-react-jsx-source": "^7.27.1",
