--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.1",
     "react-toastify": "^11.0.5",
+    "react-hook-form": "^7.51.5",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0"
   },
